--- a/my sites/CSS/login .css
+++ b/my sites/CSS/login .css
@@ -33,7 +33,7 @@
 
   label {
       font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      color: lightgoldenrodyellow;
+      color: rgb(250, 250, 210);
       display: block;
       margin-bottom: 10px;
   }
