--- a/my sites/CSS/HomePage Styles.css
+++ b/my sites/CSS/HomePage Styles.css
@@ -13,7 +13,7 @@ body {
     /* gardient bg */
     /*background: linear-gradient(-60deg, #c42e00, #171616, #ae00ff , #e7c127, #ff5100);*/
     background-size: 1000% 1000%;
-    background-image: url(./images/04-Pink_Orange_DM-4K.png); /*for blur checking only*/
+    background-image: url(./images/04-Pink_Orange_DM-4K.png);
     animation: gradient 50s ease-in-out infinite;
     height: 100vh;
     width: 100vw;
@@ -21,28 +21,22 @@ body {
 
 /* animation code */
 @keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
+    0% { background-position: 0% 50%;;}
 
-    50% {
-        background-position: 100% 50%;
-    }
+    50% { background-position: 100% 50%;}
 
-    100% {
-        background-position: 0% 50%;
-    }
+    100% {background-position: 0% 50%;}
 
 }
 
 /* nav bar styles */
 
-/* header specific hidden and show values */
-header {
-    background: rgba(255, 255, 255, 0.05);
+header{
+    backdrop-filter: blur(25px);
+}
+nav{
+    background-color: rgba(255, 255, 255, 0.05);
     border-bottom: solid rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(15px);
-    
 }
 
 header.hidden {
@@ -63,8 +57,7 @@ header.show {
 
 /* nav-item */
 .nav-item {
-    padding: 0.2px 5px;
-    color: antiquewhite;
+    padding: 10px;
     font-size: 1.2rem;
     user-select: none;
 }
@@ -73,13 +66,17 @@ header.show {
     user-select: none;
 }
 
-.nav-item:hover {
-    background-color: rgba(0, 0, 0, 0.115);
-    border-radius: 15px;
-    transition: 0.5s ease;
-    transform: translateY(-5px);
-
+.navbar-toggler{
+    color: antiquewhite;
+    border: solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
 }
+.nav-item:hover {
+    background:linear-gradient(rgba(235, 226, 231, 0.266), rgba(0, 0, 0, 0.25));
+    border: solid rgba(255, 255, 255, 0.2);
+    border-radius:8px 25px 8px 25px;
+}
+
 .nav-item:active{
     transform: scale(0.9);
     transition: 0.5s ease;
@@ -93,56 +90,96 @@ header.show {
     transition: 0.1s ease;
     transform: scale(0.89);
 }
+.nav-link {
+    color: antiquewhite;
+    text-decoration: none;
+    font-weight: 1.05;
+    font-family: 'Poppins', sans-serif;
+}
 
 /* logos */
-.logo {
-    padding-bottom: 5px;
+.logo{
+    padding:2px;
     margin-right: 10px;
-    
+    scale: 1;
+    gap: 0.5rem;
+}
 
+#logo2{ 
+    background: rgba(255, 255, 255, 0.0.5);
+    border-radius: 20%;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
+    border: 2.5px solid rgba(255, 255, 255, 0.2);
 }
 /* logo hover */
-#alp:hover {
-    transform: translateY(-30px);
-    background: rgba(255, 255, 255, 0.05);
-    border-bottom: solid rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(50px);
-    border-radius: 10%;
+#logo2:hover {
+    transform: scale(1.2);
+    background: rgba(255, 255, 255, 0.122);
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+    border: solid rgba(255, 255, 255, 0.2);
+    border-radius: 20%;
     transition: transform 0.8s ease;
     -webkit-box-reflect: below 10px linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4));
     cursor: pointer;
 }
-
-/* logo transtion */
+div{
+    padding: 5px;
+    display:flex;
+    justify-content: center;
+    display: column;
+}
 .learn {
     display: flex;
-    display: column;
-    border-radius: 14px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 40px;
 }
 
-.leran:nth-child(1) {
+.glass{
+    background:  rgba(255, 255, 255, 0.055);
+    backdrop-filter: blur(25px);
+    border: solid rgba(255, 255, 255, 0.25);
+    -webkit-backdrop-filter: blur(25px);
+    border-radius: 20%;
+    max-width: fit-content;
+    -webkit-box-reflect: below 10px linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.4), scale(1));
+    transition: delay 0.8s ease;
+}
+
+.glass:hover{
+    transform: scale(0.9);
+    border-radius: 20%;
+    transition: transform 1s ease;
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+    border: solid rgba(255, 255, 255, 0.477);
+    animation-play-state: paused;
+}
+/* logo transtion */
+
+.learn:nth-child(1) {
     padding: 20px;
-    transition-delay: 200ms;
+    transition-delay: 250ms;
     border-radius: 14px;
+
 }
 
-.leran:nth-child(2) {
+.learn:nth-child(2) {
     padding: 20px;
     transition-delay: 400ms;
     border-radius: 14px;
 }
 
-.leran:nth-child(3) {
+.learn:nth-child(3) {
     padding: 20px;
     transition-delay: 600ms;
-    border-radius: 1px;
+    border-radius: 14px;
 }
 
-.leran:nth-child(4) {
+.learn:nth-child(4) {
     padding: 20px;
     transition-delay: 800ms;
-    border-radius: 12px;
-
+    border-radius: 14px;
 }
 
 
@@ -170,7 +207,7 @@ section {
 }
 
 footer {
-    color: antiquewhite;
+    color: antiquewhite; 
     text-align: center;
     width: 100%;
     bottom: 0;
@@ -179,7 +216,7 @@ footer {
 
 /* small screen view */
 @media (max-width: 1100px) {
-    .learn {
+    div{
         display: grid;
     }
 
@@ -207,38 +244,24 @@ footer {
         border-radius: 12px
     }
 
-    header {
-        filter: blur(5px);
-    }
-
     .nav-item {
-        padding: 0px 5px;
+        padding: 5px;
         user-select: none;
     }
 
-    /* logo hover vertical */
-        .nav-item:active {
-            transform: scale(0.9);
-            transition: 0.5s ease;
-
-        }
-    #alp:hover {
-        transform: scale(1.05);
-        /* zoom effect */
+    /* nav hover vertical */
+    .nav-item:active {
+        gap:0.5rem;
+        transform: scale(0.9);
         transition: 0.8s ease;
-        padding: auto;
-        -webkit-box-reflect: left 0px linear-gradient(to left, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.2));
-    }
-
+        }
     .navbar-brand {
         user-select: none;
     }
 
     .nav-item:hover {
-        background-color: rgba(41, 41, 41, 0.1);
-        border-radius: 15px;
-        transition: 0.1s ease;
-        transform: translateY(-5px);
+        transition: 0.25s ease;
+        transform: scale(0.95);
     }
 
     .logo {
