--- a/my sites/CSS/Contact Us styles.css
+++ b/my sites/CSS/Contact Us styles.css
@@ -11,10 +11,9 @@ box-sizing: border-box;
 
 body {
     /* old background */
-    /* background: linear-gradient(-45deg, #c42e00, #cf2868, #000000, #008353);
-    background-size: 800% 800%;*/
+    /* background: linear-gradient(-45deg, #c42e00, #cf2868, #000000, #008353);*/
     animation: gradient 120s ease infinite; 
-    background: url(./images/glass-blur-background-glassmorphism-Blender-minimalism-gradient-2184759.jpg) no-repeat;
+    background: url(./images/—Pngtree—abstract\ square\ glass\ effect_1908066.png) no-repeat;
     width: 100vw;
     height: 100vh;
     background-position: center;
@@ -24,7 +23,7 @@ body {
 /* animation code*/
 @keyframes gradient {
     0% {
-    background-position: 0% 50%;
+    background-position:50% 0%;
     }
 
     50% {
@@ -32,7 +31,7 @@ body {
     }
 
     100% {
-    background-position: 0% 50%;
+    background-position: 50% 0%;
     }
   } 
 
@@ -56,14 +55,17 @@ footer {
 header{
     background: transparent;
     border-radius: 12px;
-    backdrop-filter: blur(10px);
-    border: solid rgba(255, 255, 255, 0.2);
-    
+    backdrop-filter: blur(25px);
+    border-bottom: solid rgba(255, 255, 255, 0.2);
+    /*width: 75%;
+    margin: 0 auto;
+    position: relative;
+    top: 0;
+    left: 0;*/
 }
 
 .nav-item {
-    padding: 0.2px 5px;
-    color: antiquewhite;
+    padding: 10px;
     font-size: 1.2rem;
     user-select: none;
 }
@@ -72,22 +74,40 @@ header{
     user-select: none;
 }
 
+.navbar-toggler{
+    color: antiquewhite;
+    border: solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
+}
 .nav-item:hover {
-    background-color: rgba(41, 41, 41, 0.1);
-    backdrop-filter: blur(10px);
-    border-radius: 15px;
+    background:linear-gradient(rgba(235, 226, 231, 0.266), rgba(0, 0, 0, 0.25));
+    border-radius:8px 25px 8px 25px;
+}
+
+.nav-item:active{
+    transform: scale(0.9);
     transition: 0.5s ease;
-    transform: translateY(-5px);
 }
 
 .navbar-toggler {
     padding: 10px;
-    color: #030303;
 }
 
 .navbar-toggler:active {
     transition: 0.1s ease;
     transform: scale(0.89);
+}
+.nav-link {
+    color: antiquewhite;
+    text-decoration: none;
+    font-weight: 1.05;
+    font-family: 'Poppins', sans-serif;
+}
+div{
+    padding: 5px;
+    display:flex;
+    justify-content: center;
+    display: column;
 }
 
 .logo {
@@ -107,7 +127,7 @@ header{
     display: grid;
     background: transparent;
     border: solid rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(25px);
     box-shadow: rgba(0, 0, 0, 0.425) 0px 0px 5px;
     padding: 20px;
     border-radius: 16px;
@@ -133,7 +153,7 @@ input {
     color: lightgoldenrodyellow;
     background: transparent;
     border: solid rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(25px);
     padding: 10px;
     border-radius: 12px;
     width: 135px;
@@ -194,12 +214,8 @@ input {
             width: 300px;
         }
     .nav-item:hover {
-            background-color: rgba(41, 41, 41, 0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 15px;
-            width: 170px;
-            transition: 0.5s ease;
-            transform: translateY(-5px);
+            background:linear-gradient(rgba(235, 226, 231, 0.266), rgba(0, 0, 0, 0.25));
+            border-radius:8px 25px 8px 25px;
         }
 
 }
